[package]
name = "jit-allocator2"
version = "0.2.9"
edition = "2021"
license = "MIT"
description = "An executable code allocator. Fork for jit-allocator"
repository = "https://github.com/tremwil/jit-allocator2"
readme = "README.md"
documentation = "https://docs.rs/jit-allocator2"
keywords = ["jit", "allocator", "executable", "code", "memory"]
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
cfgenius = "0.1"
errno = "0.3"
once_cell = "1.7"
intrusive-collections = "0.9"
parking_lot = "0.12"

[target.'cfg(target_arch="riscv64")'.dependencies]
wasmtime-jit-icache-coherence = "10.0"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi", "handleapi"] }

[dev-dependencies]
macroassembler = { git = "https://github.com/playxe/masm-rs" }